--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.1.3"
+    "@popperjs/core": "2.11.5",
+    "bootstrap": "5.1.3",
+    "js": "^0.1.0"
   }
 }
